test/src/e2e_vm_tests/test_programs/should_fail/self_used_without_self_parameter/src/main.sw
library;

struct S {}

impl S {
    fn use_self() {
        let _ = self.x();
        let _ = self;
    }

    fn x(self) -> u64 {
        0
    }
}
